# UAV-Projet-LUH

./: .gitignore  README.md  ReadMe.md  State_machine_info.md  equation.npy  params copy.npy  params.npy  params_lab.npy  params_v3.npy  path_28.06.2023_13.09.26.npy  patha.npy  pathb.npy
controller_tools/: package.xml  setup.py
controller_tools/src/controller_tools/: ActionServer.py  RobotStateMachine.py  tools.py
launch/: launch_all.sh
papers/: Path Following for Unmanned Aerial
papers/PF/: to_read.txt
pf_controller_lpf/: setup.py
pf_controller_lpf/launch/: setup.launch
pf_controller_lpf/src/: control.py
pf_controller_pid/: CMakeLists.txt  package.xml  setup.py
pf_controller_pid/src/: control.py
pf_controller_tuner/: CMakeLists.txt  package.xml  setup.py
pf_controller_tuner/launch/: setup.launch
pf_controller_tuner/src/: control.py
results/: path_to_follow_15.03.2023_15.28.54.npy  path_to_follow_15.03.2023_15.42.56.npy  positions_15.03.2023_14.23.17.npy  positions_15.03.2023_15.08.50.npy  positions_15.03.2023_15.28.54.npy  positions_15.03.2023_15.31.46.npy  positions_15.03.2023_15.39.12.npy  positions_15.03.2023_15.42.56.npy  positions_15.03.2023_16.46.43.npy  result_view.py
robot_state/: CMakeLists.txt  package.xml
robot_state/src/: state_pub.py
src/service_test/: CMakeLists.txt  package.xml  setup.py
src/service_test/src/: client.py  main.py
tests/: APF.py  Map.py  data_plot.py  joystick.py  main_AUV_Danut.py  roblib.py  test2.cpp  test_3D_path.py  test_alt.py  test_euler_angles.py  test_window._buttons.py  tools_3D.py
(+116 files in other folders)
